fix: 🐛 The danmu layer occlusion covers the video element

--- a/packages/xgplayer/src/skin/style/controls/danmu.scss
+++ b/packages/xgplayer/src/skin/style/controls/danmu.scss
@@ -14,10 +14,12 @@
     overflow: hidden;
     z-index: 9;
     outline: none;
+    pointer-events: none;
     > * {
       position: absolute;
       white-space: nowrap;
       z-index: 9;
+      pointer-events: auto;
     }
   }
 }
